@@ -1,4 +1,4 @@
-# $Id: BOOTCODES,v 1.6 2004/01/21 06:33:13 jaco Exp $
+# $Id: BOOTCODES,v 1.7 2004/01/21 09:59:37 jaco Exp $
 
 LiveCD bootcodes: These codes allow you to override the LiveCD
 defaults to modify the boot process for your specific needs. The
@@ -138,6 +138,9 @@ livecd md5sum           Checks the MD5 sum of the compressed
 			image and other files, verifying the
 			integrity of the downloaded iso.
 
+livecd netdrv=<module>  Override the detected network card module with
+			the one specified.
+			
 livecd noeject          Disable the ejection of the CD on
 			shutdown (power-down) or reboot.
 
@@ -160,10 +163,12 @@ livecd safex		Don't allow our specified xbpp, xres result in
 			resolution will not work for the current card, 
 			allow fallback to a safe detection default.
 
+livecd snddrv=<module>  Override the detected sound card module with
+			the one specified.
+
 livecd xbpp=<depth>     Specify the bitdepth for X. <depth> can
 			be one of 8, 15, 16, 24 or 32.
 
 livecd xres=<res>       Specify the resolution for X. <res> can
 			be one of 800x600, 1024x768, 1280x1024 or
 			1600x1400.
-
