@@ -1,4 +1,4 @@
-# $Id: CHANGELOG,v 1.109 2004/01/21 08:36:23 jaco Exp $
+# $Id: CHANGELOG,v 1.110 2004/01/21 09:59:37 jaco Exp $
 
 * Wed, Jan 21, 2003, 0.5.7-cvs
   + Buchan Milne <bgmilne@obsidian.co.za>:
@@ -82,6 +82,8 @@
       - Reworked module loading to allow for 2.4 and 2.6 USB modules
       - Make our xres, xbpp always override libDrakX unless "safex"
         is specified
+      - Allow specification of the sound module with the snddrv option
+      - Allow specification of the network module with the netdrv option
     [linuxrc]:
       - Allow for finding the cloop image on SCSI devices as well
         by probing with all the SCSI modules
